# essens

./: .gitignore  README.ja.md  README.ko.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.workspace.ts
.github/workflows/: ci.yml  release.yml
apps/desktop/: package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/lib/: rpc-client.ts
apps/desktop/src/lib/components/: AuthorProfile.svelte  ComposePost.svelte  DeviceList.svelte  FollowInput.svelte  FollowingList.svelte  IdentityExport.svelte  IdentityImport.svelte  NetworkIndicator.svelte  PostCard.svelte  ProfileHeader.svelte  SettingsPanel.svelte  Timeline.svelte  TopBar.svelte
apps/desktop/src/lib/stores/: devices.ts  follows.ts  identity.ts  network.ts  profile.ts  timeline.ts
apps/desktop/src/routes/: +layout.svelte  +page.svelte
scripts/: build-sidecar.sh
