[package]
name = "essens"
version = "0.1.0"
edition = "2021"

[lib]
name = "essens_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "essens"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
rand = "0.8"
